// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "main.js?var=84068698136b49426631",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.super-compressed.js.gz?var=84068698136b49426631",
      },
      "size": 6127,
    },
  ],
  Array [
    "main.super-compressed.js.gz?var=84068698136b49426631",
    1660,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1660,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/js/main.js.super-compressed.gz?var=8fd9de2e8d35ee79931e#hash",
    1666,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1666,
    },
  ],
  Array [
    "assets/js/main.js?var=8fd9de2e8d35ee79931e#hash",
    6138,
    Object {
      "fullhash": "8fd9de2e8d35ee79931e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=8fd9de2e8d35ee79931e#hash",
      },
      "size": 6138,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    78117,
    Object {
      "compressed": true,
      "size": 78117,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    672,
    Object {
      "compressed": true,
      "size": 672,
    },
  ],
  Array [
    "main.js.gz?var=84068698136b49426631",
    6127,
    Object {
      "compressed": true,
      "size": 6127,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631#hash",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "compression-function-5f27f917e58a6cfd45a9fb0dbfb129f9": "main.js.gz?var=84068698136b49426631",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}) and custom algorithm ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "size": 393,
    },
  ],
  Array [
    "main.js.gz?var=84068698136b49426631",
    1660,
    Object {
      "compressed": true,
      "size": 1660,
    },
  ],
  Array [
    "main.js?var=84068698136b49426631#hash",
    6127,
    Object {
      "fullhash": "84068698136b49426631",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz?var=84068698136b49426631",
      },
      "size": 6127,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option show work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/scripts/main.js.gz",
    1666,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 1666,
    },
  ],
  Array [
    "assets/scripts/main.js?var=8fd9de2e8d35ee79931e#hash",
    6138,
    Object {
      "fullhash": "8fd9de2e8d35ee79931e",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 6138,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `Array []`;

exports[`"filename" option show work: warnings 1`] = `Array []`;
